<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardUser"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:background="@drawable/background_roud"
                            android:padding="5dp"
                            android:gravity="center"
                            android:layout_width="65dp"
                            android:layout_height="65dp">
                            <com.mikhaellopez.circularimageview.CircularImageView
                                app:civ_border="false"
                                android:id="@+id/photoUser"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/app_icone"/>
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_marginLeft="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/nameUser"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:ellipsize="end"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@color/light_grey_100"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Deus É Fiel"/>
                            <TextView
                                android:layout_marginTop="2dp"
                                android:textSize="11dp"
                                android:alpha="0.8"
                                android:id="@+id/emailUser"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:ellipsize="end"
                                android:textColor="@color/light_grey_100"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Anajatuba"/>
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnSintomas"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <ImageView
                    android:tint="@android:color/black"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:alpha="0.8"
                    android:layout_marginRight="26dp"
                    android:src="@drawable/ic_action_sintomas"/>
                <TextView
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sintomas_menu"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_Msg"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <ImageView
                    android:tint="@android:color/black"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:alpha="0.8"
                    android:layout_marginRight="26dp"
                    android:src="@drawable/ic_action_msg"/>
                <TextView
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg"/>
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <ImageView
                    android:tint="@android:color/black"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:alpha="0.8"
                    android:layout_marginRight="26dp"
                    android:src="@drawable/ic_action_chat"/>
                <TextView
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/batepapo"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnDonate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <ImageView
                    android:tint="@android:color/black"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:alpha="0.8"
                    android:layout_marginRight="26dp"
                    android:src="@drawable/ic_action_donate"/>
                <TextView
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/donate"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnRate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <ImageView
                    android:tint="@android:color/black"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:alpha="0.8"
                    android:layout_marginRight="26dp"
                    android:src="@drawable/ic_action_rate"/>
                <TextView
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Classifique o app"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnShared"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <ImageView
                    android:tint="@android:color/black"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:alpha="0.8"
                    android:layout_marginRight="26dp"
                    android:src="@drawable/ic_action_shared"/>
                <TextView
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Compartilhar app"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnSobre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <ImageView
                    android:tint="@android:color/black"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:alpha="0.8"
                    android:layout_marginRight="26dp"
                    android:src="@drawable/ic_action_sobre"/>
                <TextView
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sobre"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btnFeedback"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">
            <ImageView
                android:tint="@android:color/black"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:alpha="0.8"
                android:layout_marginRight="26dp"
                android:src="@drawable/ic_action_feedback"/>
            <TextView
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Feedback"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">
            <com.mikhaellopez.circularimageview.CircularImageView
                app:civ_border="false"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginLeft="16dp"
                android:alpha="0.8"
                android:layout_marginRight="16dp"
                android:src="@drawable/profile"/>
            <TextView
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Igor Dutra Sanches"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
